# konto_ordner

./: .gitignore  pyproject.toml
